<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:orientation="vertical"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/backDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yo_hallo"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bila_ada_pertanyaan_silahkan_menghubungi_developer"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developers :"
            android:textColor="@color/black"
            android:textSize="@dimen/_25ssp"
            android:layout_marginStart="@dimen/_16sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angga_pambudi_setiawan"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/instagram"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": @anggapamb"
                android:textStyle="italic"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/telegram"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": @anggapamb"
                android:textStyle="italic"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>