<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:background="@drawable/background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gambarIcon"
                    android:onClick="onClick"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/splashscreen"/>

                <TextView
                    android:id="@+id/textNonton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="@dimen/_235sdp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextJudul"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_38sdp"
                            android:background="@drawable/background_edittext"
                            android:hint="@string/masukan_judul"
                            android:inputType="textCapWords"
                            android:padding="@dimen/_8sdp"/>

                        <ImageView
                            android:id="@+id/iconSearch"
                            android:onClick="onClick"
                            android:background="?attr/selectableItemBackground"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_search"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/btnFilter"
                        android:onClick="onClick"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="@dimen/_38sdp"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:src="@drawable/ic_filter"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_170sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tvRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    tools:listitem="@layout/item_home_recyclerview"/>

                <LinearLayout
                    android:id="@+id/viewNoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/ic_folder"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textSize="@dimen/_15ssp"/>

                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/btnHelp"
                android:onClick="onClick"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_help"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>