<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_yang_akan_tayang"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blackColorImporv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <Button
            android:id="@+id/btnComingSoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comingsoon"
            android:backgroundTint="@color/greyColor"
            android:textColor="@color/blackColorImporv"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_series"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blackColorImporv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <Button
            android:id="@+id/btnTvSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_series__"
            android:backgroundTint="@color/greyColor"
            android:textColor="@color/blackColorImporv"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_berdasarkan_tahun"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blackColorImporv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2015"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2016"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2017"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2018"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2019"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2020"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="3"
                    android:hint="Tuliskan tahun.."
                    android:textAlignment="center"
                    android:inputType="number"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/blackColorImporv"
                    android:textColorHint="@color/blackColorImporv"
                    android:background="@drawable/background_edittext_filter"/>

                <Button
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="🔍"
                    android:backgroundTint="@color/blueColorBackground"
                    android:textColor="@color/blackColorImporv"
                    android:textSize="@dimen/_15ssp"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie berdasarkan negara :"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blackColorImporv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Indonesia"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Japan"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Korea"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Thailand"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="3"
                    android:hint="Tuliskan negara.."
                    android:textAlignment="center"
                    android:inputType="textPersonName"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/blackColorImporv"
                    android:textColorHint="@color/blackColorImporv"
                    android:background="@drawable/background_edittext_filter"/>

                <Button
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="🔍"
                    android:backgroundTint="@color/blueColorBackground"
                    android:textColor="@color/blackColorImporv"
                    android:textSize="@dimen/_15ssp"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie berdasarkan genre :"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blackColorImporv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Animation"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Comedy"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Action"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Romance"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Adventure"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Family"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Fantasy"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Drama"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="History"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Thriller"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Sci-Fi"
                    android:layout_weight="1"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Horror"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="@color/greyColor"
                    android:textColor="@color/blackColorImporv"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>